Rest test (#1)
* add json/html mime

* mime tests

* Update README.md

---------

Co-authored-by: Oleg Zagryvyi <olegzagraf@gmail.com>